--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,9 +8,6 @@
   font-weight: 400;
   src: url("/fonts/MiSans-Regular.woff2") format("woff2"),
        url("/fonts/MiSans-Regular.ttf") format("truetype");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
-    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 @font-face {
@@ -20,14 +17,11 @@
   font-weight: 700;
   src: url("/fonts/MiSans-Bold.woff2") format("woff2"),
        url("/fonts/MiSans-Bold.ttf") format("truetype");
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
-    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
-    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
 body {
   @apply bg-background-light dark:bg-background-dark text-gray-800;
-  font-family: MiSans, "Source Han Serif CN VF" !important;
+  font-family: MiSans, -apple-system, BlinkMacSystemFont, "PingFang SC", "Microsoft YaHei", sans-serif !important;
 }
 
 textarea:focus {
@@ -36,7 +30,7 @@ textarea:focus {
 
 .wmde-markdown {
   @apply bg-w;
-  font-family: MiSans, "Source Han Serif CN VF" !important;
+  font-family: MiSans, -apple-system, BlinkMacSystemFont, "PingFang SC", "Microsoft YaHei", sans-serif !important;
 }
 
 .w-md-editor {
